tests/NormalTests/paczka1/fuzzy1/35113203.err
Error in line 13: 2MNU0uxykE A768 95,45
Error in line 12: Kyz A96 85,5
Error in line 15: 2MNU0uxykE A768 464,1
Error in line 18: Kyz S198 30,7
Error in line 19: 2MNU0uxykE A990 44,7
